ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-04-24 Benedikt Heintel
	- GUI:
		* Fixed #1196: New mail account/forward and auto responder handling
	- ENGINE:
		* Fixed #1148: DNS serial is not updated more than once a day when changing sub domains
		* Fixed #1196: New mail account/forward and auto responder handling

2008-04-14 Jochen Manz
	- CONFIGS:
		* Corrected gentoo postfix main.cnf
	- SETUP:
		* Fixed #1204: wrong configs-Path in Makefile.ubuntu (Install doesn't work)

2008-04-17 Benedikt Heintel
	- ENGINE:
		* Fixed #1193: Typo in engine/ispcp-mbox-mngr
	- GUI:
		* Fixed #1192: Typo in gui/admin/settings.php
	- SETUP:
		* Fixed #1191: MySQL password auto-generation for daemons shouldn't contain '#'

2008-04-16 Benedikt Heintel
	- CONFIGS:
		* Fixed: Error in logrotation
	- SETUP:
		* Fixed #1189: Bug in ispcp-setup

2008-04-14 Jochen Manz
	- CONFIGS:
		* Cleaned up Gentoos needed packages

2008-04-13 Benedikt Heintel
	- CONFIGS:
		* Fixed #1185: 2 postfix parameters no longer/not existing
	- GUI:
		* Fixed: orderpanel layout
	- SETUP:
		* Fixed #1172: Regenerate proftpd config fails in update

2008-04-11 Benedikt Heintel
	- TOOLS:
		* Cleanup and Update of SquirrelMail

2008-04-08 Jochen Manz
	- CONFIGS
		* Fixed #1177: revise FreeBSD Doc
		* Fixed #1178: Fix some configuration in FreeBSD dist

2005-04-07 Benedikt Heintel
	- LANGUAGES:
		* Updated German language file

2008-04-07 Jochen Manz
	- GUI:
		* Fixed #1174: Traffic at midnight not displayed

2008-04-06 Jochen Manz
	- ENGINE:
		* Fixed #1173: autoresponders don't work
	- SETUP:
		* Copyright and licence for every makefile
		* Dropped the mta-cfg-setup.sh

2008-04-05 Benedikt Heintel
	- SETUP:
		* Added: locales
	- TOOLS:
		* Fixed Webmail: Layout of loginscreen broken, if lang string "username" or "password" longer than the english one
	- DISTS:
		* Fixed #1168: (fedora) Proftpd-Config for Fedora
		* Fixed #1167: (fedora) postfix-config for fedora

2008-04-04 Benedikt Heintel